<resources>
    <string name="app_name">CurrencyExchanger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_balances">MY BALANCES</string>
    <string name="currency_exchange">CURRENCY EXCHANGE</string>
    <string name="sell">Sell</string>
    <string name="price_hint">0.00</string>
    <string name="eur">EUR</string>
    <string name="zero_value">0.00</string>
    <string name="receive">Receive</string>
    <string name="submit">submit</string>
    <string name="usd">USD</string>
</resources>